kube_apps/pulse-proxmox/ingress-pulse.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pulse-ingresscdr
  namespace: pulse

spec:
  entryPoints:
    - websecure

  routes:
  - kind: Rule
    match: Host(`pulse.houseofus.eu`)
    services:
    - kind: Service
      name: pulse
      port: 7655
      namespace: pulse
      scheme: http
      serversTransport: pulse-transport
      #sticky:
      #  cookie:
      #    name: nc_session_id
  tls:
    certResolver: file
